--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,29 +1,64 @@
+// {
+//     // Use IntelliSense to learn about possible attributes.
+//     // Hover to view descriptions of existing attributes.
+//     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+//     "version": "0.2.0",
+//     "configurations": [
+//         {
+//             "name": "Launch Program",
+//             "program": "${workspaceFolder}/backend/server.js",
+//             "request": "launch",
+//             "type": "node",
+//             "runtimeExecutable": "node",
+//             "runtimeArgs": [
+//                 "--inspect-brk=9299"  // 启用调试，挂起代码执行，等待调试器连接
+//             ],
+//             "skipFiles": [
+//                 "<node_internals>/**"
+//             ]
+//         },
+        
+//         {
+//             "name": "Launch Chrome",
+//             "request": "launch",
+//             "type": "chrome",
+//             "url": "http://localhost:3000",
+//             "webRoot": "${workspaceFolder}"
+//         },
+//     ]
+// }
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/backend/server.js",
-            "request": "launch",
-            "type": "node",
-            "runtimeExecutable": "node",
-            "runtimeArgs": [
-                "--inspect-brk=9229"  // 启用调试，挂起代码执行，等待调试器连接
-            ],
-            "skipFiles": [
-                "<node_internals>/**"
-            ]
-        },
         
-        {
-            "name": "Launch Chrome",
-            "request": "launch",
-            "type": "chrome",
-            "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
-        },
+      {
+        "name": "Launch Node.js backend",
+        "type": "node",
+        "request": "launch",
+        // "runtimeArgs": ["--inspect-brk=0.0.0.0:9299"],
+        "program": "${workspaceFolder}/backend/server.js",
+        "restart": true, // 代码改动后自动重启
+        "skipFiles": ["<node_internals>/**"]
+      },
+      {
+        "name": "Launch React in Chrome",
+        "type": "chrome",
+        "request": "launch",
+        "url": "http://localhost:3000",
+        "webRoot": "${workspaceFolder}/frontend/src",
+        "sourceMapPathOverrides": {
+          "webpack:///src/*": "${webRoot}/*"
+        }
+       // "restart": true // 允许 VS Code 自动重启调试进程
+      }
+    ],
+    "compounds": [
+      {
+        "name": "Launch React and Node.js Together",
+        "configurations": ["Launch React in Chrome", "Launch Node.js backend"]
+      }
     ]
-}
+  }
+  
+  
+  
